map-app/app/view/{sidebar.js,sidebar/base.js} - stop navigation arrows wrapping
On iOS/Safari. This also makes them sized the same as the other
buttons.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -487,6 +487,11 @@ div.map-app-map-container {
   font-size: 1.4rem;
 }
 
+#map-app-sidebar-history-navigation {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .w3-button:hover {
   color: white !important;
   background-color: var(--dark) !important;
